[package]
name = "downloader-wrapper"
version = "0.4.0"
edition = "2024"

[profile.release]
lto = true

[[bin]]
name = "aria2-wrapper"
path = "src/bin/aria2.rs"

[[bin]]
name = "curl-wrapper"
path = "src/bin/curl.rs"

[dependencies]
url = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "1"
dirs = "6"
duct = "1"
shlex = "1"
rolling-file = "0.2"
tracing-appender = "0.2"
